--- a/index.html
+++ b/index.html
@@ -11,3 +11,12 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<style scoped>
+  html, body {
+    height: 98%;
+  }
+  #app {
+    height: 100%;
+  }
+</style>
